--- a/ec3730/Base.lproj/LaunchScreen.storyboard
+++ b/ec3730/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,32 +14,27 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="Ze5-6b-2t3">
+                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" semanticContentAttribute="spatial" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="NetUtils" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h7e-vf-IDe">
-                                <rect key="frame" x="0.0" y="20" width="375" height="50"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" semanticContentAttribute="spatial" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NetUtils" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h7e-vf-IDe">
+                                <rect key="frame" x="0.0" y="315.5" width="375" height="36"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" staticText="YES" header="YES"/>
                                 </accessibility>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="39T-Pe-8lk"/>
-                                    <constraint firstAttribute="width" constant="375" id="PxS-E8-U3l"/>
-                                </constraints>
                                 <viewLayoutGuide key="safeArea" id="Lb7-t0-Nhz"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="h7e-vf-IDe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9ed-BI-nxX"/>
-                            <constraint firstItem="h7e-vf-IDe" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="KQf-yA-8Tt"/>
-                            <constraint firstItem="h7e-vf-IDe" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="SqD-4W-GlB"/>
-                            <constraint firstItem="h7e-vf-IDe" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="p1K-1L-p69"/>
-                            <constraint firstItem="h7e-vf-IDe" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" multiplier="2" constant="20" symbolic="YES" id="sbk-wp-UP9"/>
+                            <constraint firstAttribute="trailing" secondItem="h7e-vf-IDe" secondAttribute="trailing" id="Fa0-YS-e0o"/>
+                            <constraint firstItem="h7e-vf-IDe" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="FvD-jW-0oP"/>
+                            <constraint firstItem="h7e-vf-IDe" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="b94-7Q-7vc"/>
+                            <constraint firstItem="h7e-vf-IDe" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="vZy-q1-a3q"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
